<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Submission 2 Github UserApp</string>
    <string name="name">Name</string>
    <string name="uname">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="loc">Location : %s </string>
    <string name="corp">Company : %s </string>
    <string name="repo">Repository : %s </string>
    <string name="avatar">Avatar</string>
    <string name="change_language_settings">Change Language Settings</string>
</resources>